# Clean-code-project

./: Base.cpp  Base.h  CMakeLists.txt  Circle.cpp  Circle.h  CommandLineInterface.cpp  DynamicMemoryManagment.cpp  InputValidation.cpp  Line.cpp  Line.h  Makefile  OOP_Project_SVG.sln  OOP_Project_SVG.vcxproj  OOP_Project_SVG.vcxproj.filters  Point.cpp  Polygon.cpp  Polygon.h  README.md  Rectangle.cpp  Rectangle.h  SVGContainer.cpp  SVGContainer.h  SVGFile.cpp  SVGFile.h  Source.cpp  StringManip.cpp  StringManip.h  catch.hpp  main.cpp  plan.md
Debug/: vc141.idb
Debug/OOP_Project_SVG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP_Project_SVG.lastbuildstate
Headers/: Base.h  Base.hpp  Circle.h  Circle.hpp  CommandLineInterface.h  CommandLineInterface.hpp  DynamicMemoryManagment.h  DynamicMemoryManagment.hpp  InputParser.h  InputParser.hpp  InputValidation.h  InputValidation.hpp  Line.h  Line.hpp  MathFunctions.h  MathFunctions.hpp  Point.cpp  Point.hpp  Polygon.h  Polygon.hpp  Rectangle.h  Rectangle.hpp  SVGContainer.h  SVGContainer.hpp  SVGFile.h  SVGFile.hpp  StringManip.h  StringManip.hpp
Headers/html/: Base_8hpp_source.html  Circle_8hpp_source.html  CommandLineInterface_8hpp_source.html  DynamicMemoryManagment_8hpp_source.html  InputParser_8hpp_source.html  InputValidation_8hpp_source.html  Line_8hpp_source.html  MathFunctions_8hpp_source.html  Point_8hpp_source.html  Rectangle_8hpp_source.html  SVGContainer_8hpp_source.html  SVGFile_8hpp_source.html  StringManip_8hpp_source.html  annotated.html  classBaseShape-members.html  classBaseShape.html  classCircle-members.html  classCircle.html  classThe.html  (+17 more)
(+21 files in other folders)
